# vrbspheuristics

./: .gitignore  CMakeLists.txt  DifferentialEvolution.cpp  HeuristicBRKGA.cpp  HeuristicDecoder.cpp  HeuristicDecoder.h  ListaConjuntos.txt  ListaConjuntos_bkp.txt  Makefile  SampleDecoder.cpp  SampleDecoder.h  SolutionVerifier.h  Structures.h  Utility.cpp  Utility.h  VNS.cpp  check.py  main.cpp  mainScript.sh  scriptBRKGA.sh  scriptDE.sh  scriptDE_BEST_1_BIN  scriptVNS.sh
Instancias/D10000x10000/U_1024/: U_1024_1.txt  U_1024_10.txt  U_1024_11.txt  U_1024_12.txt  U_1024_13.txt  U_1024_14.txt  U_1024_15.txt  U_1024_16.txt  U_1024_17.txt  U_1024_18.txt  U_1024_19.txt  U_1024_2.txt  U_1024_20.txt  U_1024_21.txt  U_1024_22.txt  U_1024_23.txt  U_1024_24.txt  U_1024_25.txt  U_1024_26.txt  U_1024_27.txt  U_1024_28.txt  U_1024_29.txt  U_1024_3.txt  U_1024_30.txt  U_1024_4.txt  U_1024_5.txt  U_1024_6.txt  U_1024_7.txt  U_1024_8.txt  U_1024_9.txt
Instancias/D10000x10000/U_128/: U_128_1.txt  U_128_10.txt  U_128_11.txt  U_128_12.txt  U_128_13.txt  U_128_14.txt  U_128_15.txt  U_128_16.txt  U_128_17.txt  U_128_18.txt  U_128_19.txt  U_128_2.txt  U_128_20.txt  U_128_21.txt  U_128_22.txt  U_128_23.txt  U_128_24.txt  U_128_25.txt  U_128_26.txt  U_128_27.txt  U_128_28.txt  U_128_29.txt  U_128_3.txt  U_128_30.txt  U_128_4.txt  U_128_5.txt  U_128_6.txt  U_128_7.txt  U_128_8.txt  U_128_9.txt
Instancias/D10000x10000/U_16/: U_16_1.txt  U_16_10.txt  U_16_11.txt  U_16_12.txt  U_16_13.txt  U_16_14.txt  U_16_15.txt  U_16_16.txt  U_16_17.txt  U_16_18.txt  U_16_19.txt  U_16_2.txt  U_16_20.txt  U_16_21.txt  U_16_22.txt  U_16_23.txt  U_16_24.txt  U_16_25.txt  U_16_26.txt  U_16_27.txt  U_16_28.txt  U_16_29.txt  U_16_3.txt  U_16_30.txt  U_16_4.txt  U_16_5.txt  U_16_6.txt  U_16_7.txt  U_16_8.txt  U_16_9.txt
Instancias/D10000x10000/U_2048/: U_2048_1.txt  U_2048_10.txt  U_2048_11.txt  U_2048_12.txt  U_2048_13.txt  U_2048_14.txt  U_2048_15.txt  U_2048_16.txt  U_2048_17.txt  U_2048_18.txt  U_2048_19.txt  U_2048_2.txt  U_2048_20.txt  U_2048_21.txt  U_2048_22.txt  U_2048_23.txt  U_2048_24.txt  U_2048_25.txt  U_2048_26.txt  U_2048_27.txt  U_2048_28.txt  U_2048_29.txt  U_2048_3.txt  U_2048_30.txt  U_2048_4.txt  U_2048_5.txt  U_2048_6.txt  U_2048_7.txt  U_2048_8.txt  U_2048_9.txt
Instancias/D10000x10000/U_256/: U_256_1.txt  U_256_10.txt  U_256_11.txt  U_256_12.txt  U_256_13.txt  U_256_14.txt  U_256_15.txt  U_256_16.txt  U_256_17.txt  U_256_18.txt  U_256_19.txt  U_256_2.txt  U_256_20.txt  U_256_21.txt  U_256_22.txt  U_256_23.txt  U_256_24.txt  U_256_25.txt  U_256_26.txt  U_256_27.txt  U_256_28.txt  U_256_29.txt  U_256_3.txt  U_256_30.txt  U_256_4.txt  U_256_5.txt  U_256_6.txt  U_256_7.txt  U_256_8.txt  U_256_9.txt
Instancias/D10000x10000/U_32/: U_32_1.txt  U_32_10.txt  U_32_11.txt  U_32_12.txt  U_32_13.txt  U_32_14.txt  U_32_15.txt  U_32_16.txt  U_32_17.txt  U_32_18.txt  U_32_19.txt  U_32_2.txt  U_32_20.txt  U_32_21.txt  U_32_22.txt  U_32_23.txt  U_32_24.txt  U_32_25.txt  U_32_26.txt  U_32_27.txt  U_32_28.txt  U_32_29.txt  U_32_3.txt  U_32_30.txt  U_32_4.txt  U_32_5.txt  U_32_6.txt  U_32_7.txt  U_32_8.txt  U_32_9.txt
Instancias/D10000x10000/U_512/: U_512_1.txt  U_512_10.txt  U_512_11.txt  U_512_12.txt  U_512_13.txt  U_512_14.txt  U_512_15.txt  U_512_16.txt  U_512_17.txt  U_512_18.txt  U_512_19.txt  U_512_2.txt  U_512_20.txt  U_512_21.txt  U_512_22.txt  U_512_23.txt  U_512_24.txt  U_512_25.txt  U_512_26.txt  U_512_27.txt  U_512_28.txt  U_512_29.txt  U_512_3.txt  U_512_30.txt  U_512_4.txt  U_512_5.txt  U_512_6.txt  U_512_7.txt  U_512_8.txt  U_512_9.txt
Instancias/D10000x10000/U_64/: U_64_1.txt  U_64_10.txt  U_64_11.txt  U_64_12.txt  U_64_13.txt  U_64_14.txt  U_64_15.txt  U_64_16.txt  U_64_17.txt  U_64_18.txt  U_64_19.txt  U_64_2.txt  U_64_20.txt  U_64_21.txt  U_64_22.txt  U_64_23.txt  U_64_24.txt  U_64_25.txt  U_64_26.txt  U_64_27.txt  U_64_28.txt  U_64_29.txt  U_64_3.txt  U_64_30.txt  U_64_4.txt  U_64_5.txt  U_64_6.txt  U_64_7.txt  U_64_8.txt  U_64_9.txt
Instancias/D10000x10000/U_8/: U_8_1.txt  U_8_10.txt  U_8_11.txt  U_8_12.txt  U_8_13.txt  U_8_14.txt  U_8_15.txt  U_8_16.txt  U_8_17.txt  U_8_18.txt  U_8_19.txt  U_8_2.txt  U_8_20.txt  U_8_21.txt  U_8_22.txt  U_8_23.txt  U_8_24.txt  U_8_25.txt  U_8_26.txt  U_8_27.txt  U_8_28.txt  U_8_29.txt  U_8_3.txt  U_8_30.txt  U_8_4.txt  U_8_5.txt  U_8_6.txt  U_8_7.txt  U_8_8.txt  U_8_9.txt
Instancias/D250x250/U_1024/: U_1024_1.txt  U_1024_10.txt  U_1024_11.txt  U_1024_12.txt  U_1024_13.txt  U_1024_14.txt  U_1024_15.txt  U_1024_16.txt  U_1024_17.txt  U_1024_18.txt  U_1024_19.txt  U_1024_2.txt  U_1024_20.txt  U_1024_21.txt  U_1024_22.txt  U_1024_23.txt  U_1024_24.txt  U_1024_25.txt  U_1024_26.txt  U_1024_27.txt  U_1024_28.txt  U_1024_29.txt  U_1024_3.txt  U_1024_30.txt  U_1024_4.txt  U_1024_5.txt  U_1024_6.txt  U_1024_7.txt  U_1024_8.txt  U_1024_9.txt
Instancias/D250x250/U_128/: U_128_1.txt  U_128_10.txt  U_128_11.txt  U_128_12.txt  U_128_13.txt  U_128_14.txt  U_128_15.txt  U_128_16.txt  U_128_17.txt  U_128_18.txt  U_128_19.txt  U_128_2.txt  U_128_20.txt  U_128_21.txt  U_128_22.txt  U_128_23.txt  U_128_24.txt  U_128_25.txt  U_128_26.txt  U_128_27.txt  U_128_28.txt  U_128_29.txt  U_128_3.txt  U_128_30.txt  U_128_4.txt  U_128_5.txt  (+4 more)
verificador/: Makefile  SV  SolutionVerifier.cpp
(+210 files in other folders)
